@@ -58,6 +58,8 @@ RFCs
 
 Bugfixes
 ~~~~~~~~
+- Fixed bug #45 - Setting Properties on a LogAppender fails
+  (friebe)
 - Fixed webservices.json.JsonDecoder when decoding overly long strings
   (friebe, Mihai Ghigea)
 - Fixed possible fatal error in lang.ChainedException common stack trace
